Got it to run... so much more work to still do